--- a/Src/styles.css
+++ b/Src/styles.css
@@ -38,3 +38,12 @@ body {
 .btn {
   font-size: 14px;
 }
+
+@media all and (max-width:600px) {
+  body {
+    position: relative;
+    top: 200px;
+    left:100px;
+    margin:200px auto;
+  }
+}
